# hackai26

./: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json
EDGE/: import_log.txt  test.py  vis.py
EDGE/dataset/: dance_dataset.py  quaternion.py
EDGE/model/: diffusion.py
apps/web/: package-lock.json  package.json  tsconfig.json
backend/: __init__.py  requirements.txt  server.py
backend/path_policy_artifacts/: feature_manifest.json  graph_snapshot.json  policy.pt  training_summary.json
backend/rl/: __init__.py  export_graph_snapshot.py  graph_builder.py  path_policy.py  requirements.txt  train.sh  train_path_policy.py
backend/tests/: test_graph_builder.py  test_path_policy.py
data/: app.db
docs/: ai-judges-brief.md
services/api/: pyproject.toml
services/api/app/: __init__.py  audio.py  choreography.py  database.py  edge_client.py  errors.py  jobs.py  lyria.py  main.py  models.py  schemas.py  scoring.py  settings.py
services/api/dance_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/api/data/: app.db
services/api/tests/: test_api_integration.py  test_difficulty.py  test_error_paths.py  test_novelty.py  test_scoring.py
services/edge-worker/: .direnv  pyproject.toml
services/edge-worker/app/: __init__.py  main.py
services/edge-worker/dance_edge_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/edge-worker/docker/: Dockerfile
services/edge-worker/scripts/: edge_adapter.py  edge_env.sh
services/edge-worker/tests/: test_worker.py
src/app/: globals.css  layout.tsx  page.tsx
(+56 files in other folders)
